--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -37,12 +37,37 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:cardBackgroundColor="#00424242">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="right"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/weatherimg"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="20dp"
+                                android:background="@drawable/circle"></ImageView>
+
+
+                        </LinearLayout>
                     </androidx.cardview.widget.CardView>
-                    <LinearLayout
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#63171918"/>
+                        <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="bottom"
                         android:orientation="horizontal">
+
                         <TextView
                             android:id="@+id/stateName"
                             android:layout_marginLeft="20dp"
@@ -57,44 +82,30 @@
                             android:fontFamily="sans-serif"
                             android:textFontWeight="500"></TextView>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:gravity="right">
-                            <ImageView
-                                android:id="@+id/weatherimg"
-                                android:layout_marginRight="20dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_width="70dp"
-                                android:layout_height="70dp"
-                                android:background="@drawable/circle"
-                                ></ImageView>
-
-
-                        </LinearLayout>
-
                     </LinearLayout>
+                    </FrameLayout>
 
 
                 </FrameLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Queen of hill stations"
                         android:textSize="20dp"
                         android:layout_gravity="left"></TextView>
+
                     <Button
                         android:id="@+id/thirdPage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Expand"
-                        android:textAllCaps="false">
-                    </Button>
+                        android:layout_gravity="bottom|right"
+                        android:text="Explore!"
+                        android:textAllCaps="false"
+                        ></Button>
                 </LinearLayout>
             </LinearLayout>
 
